[gd_scene load_steps=5 format=3 uid="uid://bahplrcm8cykh"]

[ext_resource type="Script" path="res://Scripts/card_hand.gd" id="1_kdiqq"]
[ext_resource type="PackedScene" uid="uid://cuuphyhhs1jpv" path="res://scenes/deck.tscn" id="2_vicgh"]
[ext_resource type="PackedScene" uid="uid://d3xpytexxvo37" path="res://scenes/discard_pile.tscn" id="3_kw6kb"]
[ext_resource type="PackedScene" uid="uid://b8xf6d30x5o47" path="res://scenes/mana.tscn" id="4_66u4a"]

[node name="CardUI" type="Node2D"]
script = ExtResource("1_kdiqq")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(218, 413)

[node name="CardHand" type="Node2D" parent="."]

[node name="Deck" parent="." instance=ExtResource("2_vicgh")]
position = Vector2(71, 353)

[node name="DiscardPile" parent="." instance=ExtResource("3_kw6kb")]
position = Vector2(71, 435)

[node name="Mana" parent="." instance=ExtResource("4_66u4a")]
position = Vector2(1043, 406)
