[gd_scene load_steps=2 format=3 uid="uid://bbb7x8iedogb0"]

[ext_resource type="Script" path="res://Scripts/card_hand.gd" id="1_kdiqq"]

[node name="CardHand" type="Node2D"]
script = ExtResource("1_kdiqq")

[node name="GenerateCard1" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Generate card 1"

[node name="GenerateCard2" type="Button" parent="."]
offset_left = 1.0
offset_top = 37.0
offset_right = 120.0
offset_bottom = 68.0
text = "Generate card 2
"

[node name="CardPosition" type="Marker2D" parent="."]
position = Vector2(516, 298)

[connection signal="pressed" from="GenerateCard1" to="." method="_on_generate_card_1_pressed"]
[connection signal="pressed" from="GenerateCard2" to="." method="_on_generate_card_2_pressed"]
